force-app/main/default/objects/SolicitudMuestra__c/SolicitudMuestra__c.object-meta.xml
<CustomObject>
    <label>Solicitud de muestra</label>
    <nameField>
        <label>Nombre de Solicitud</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de muestras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>