force-app/main/default/objects/SolicitudMuestra__c/fields/CeBe__c.field-meta.xml
<CustomField>
    <fullName>CeBe__c</fullName>
    <defaultValue>$User.CeBe__c</defaultValue>
    <description>Colocar el CeBe</description>
    <label>CeBe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>