force-app/main/default/objects/SolicitudMuestra__c/fields/entrega__c.field-meta.xml
<CustomField>
    <fullName>entrega__c</fullName>
    <label>Lugar de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Centro_suministrador</valueSetName>
    </valueSet>
</CustomField>