force-app/main/default/objects/SolicitudMuestra__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Preparación de Muestra</fullName>
            </value>
            <value>
                <fullName>Muestra en Almacén</fullName>
            </value>
            <value>
                <fullName>Entregado al Ejecutivo</fullName>
            </value>
            <value>
                <fullName>Muestra entregada</fullName>
                <color>#009900</color>
                <label>Muestra entregada</label>
            </value>
            <value>
                <fullName>Muestra no entregada</fullName>
                <color>#FF0000</color>
                <label>Muestra no entregada</label>
            </value>
            <value>
                <fullName>Muestra en Almacén Planta</fullName>
                <isActive>false</isActive>
                <label>Muestra en Almacén Planta</label>
            </value>
            <value>
                <fullName>Pendiente de recolección</fullName>
                <isActive>false</isActive>
                <label>Pendiente de recolección</label>
            </value>
            <value>
                <fullName>Pendiente de autorización</fullName>
                <isActive>false</isActive>
                <label>Solicitar autorización</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>