force-app/main/default/objects/SolicitudMuestra__c/fields/fecha_de_entrega_almacen__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_entrega_almacen__c</fullName>
    <label>Fecha de entrega en almacen</label>
    <type>Date</type>
</CustomField>