force-app/main/default/objects/SolicitudMuestra__c/fields/fecha_de_entrega_confirmada__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_entrega_confirmada__c</fullName>
    <label>Fecha de entrega confirmada</label>
    <type>Date</type>
</CustomField>