force-app/main/default/objects/SolicitudMuestra__c/fields/fecha_entrega__c.field-meta.xml
<CustomField>
    <fullName>fecha_entrega__c</fullName>
    <label>Fecha de entrega solicitada</label>
    <type>Date</type>
</CustomField>