force-app/main/default/objects/SolicitudMuestra__c/fields/Num_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Num_Muestra__c</fullName>
    <displayFormat>M-{000000}</displayFormat>
    <label>Num. Muestra</label>
    <type>AutoNumber</type>
</CustomField>