force-app/main/default/objects/SolicitudMuestra__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Muestras</relationshipName>
    <type>Lookup</type>
</CustomField>