force-app/main/default/objects/SolicitudMuestra__c/fields/PorcentajePolitica__c.field-meta.xml
<CustomField>
    <fullName>PorcentajePolitica__c</fullName>
    <formula>Total_de_muestras__c /Total_de_la_oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% de la oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>