force-app/main/default/objects/SolicitudMuestra__c/fields/Producto_Disponible_en_Tienda__c.field-meta.xml
<CustomField>
    <fullName>Producto_Disponible_en_Tienda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto Disponible en Tienda</label>
    <type>Checkbox</type>
</CustomField>