force-app/main/default/objects/SolicitudMuestra__c/fields/Region_2__c.field-meta.xml
<CustomField>
    <fullName>Region_2__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>