force-app/main/default/objects/SolicitudMuestra__c/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <formula>TEXT( Owner:User.Equipo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Región</label>
    <type>Text</type>
</CustomField>