force-app/main/default/objects/SolicitudMuestra__c/fields/Tipo_de_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Laboratorio__c</fullName>
    <label>Tipo de Laboratorio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>tipo_muestra__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto de Linea</fullName>
            </value>
            <value>
                <fullName>Laboratorio de Pinturas</fullName>
            </value>
            <value>
                <fullName>Laboratorio de Concretos</fullName>
            </value>
            <value>
                <fullName>APER (Asfaltos, Poliuretanos, Epoxicos y Resinas)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>