force-app/main/default/objects/SolicitudMuestra__c/fields/tipo_muestra__c.field-meta.xml
<CustomField>
    <fullName>tipo_muestra__c</fullName>
    <label>Tipo de Muestra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Producto de Linea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>