force-app/main/default/objects/SolicitudMuestra__c/fields/Total_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Total_de_la_oportunidad__c</fullName>
    <formula>Oportunidad__r.ValorProyecto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de la oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>