force-app/main/default/objects/SolicitudMuestra__c/fields/Total_de_muestras__c.field-meta.xml
<CustomField>
    <fullName>Total_de_muestras__c</fullName>
    <label>Total de muestras</label>
    <summarizedField>Muestras__c.Costo_de_la_muestra__c</summarizedField>
    <summaryForeignKey>Muestras__c.Solicitud_de_muestra_del__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>