force-app/main/default/objects/SolicitudMuestra__c/fields/Vale__c.field-meta.xml
<CustomField>
    <fullName>Vale__c</fullName>
    <label>Vale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>