force-app/main/default/objects/SolicitudMuestra__c/listViews/Muestras_Pendientes_por_Entregar.listView-meta.xml
<ListView>
    <fullName>Muestras_Pendientes_por_Entregar</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>fecha_entrega__c</columns>
    <columns>entrega__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>Muestra en Almacén</value>
    </filters>
    <label>Muestras Pendientes por Entregar</label>
    <sharedTo>
        <role>Muestras</role>
    </sharedTo>
</ListView>