force-app/main/default/objects/SolicitudMuestra__c/listViews/Muestras_Rechazadas.listView-meta.xml
<ListView>
    <fullName>Muestras_Rechazadas</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>region__c</columns>
    <columns>PorcentajePolitica__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>Rechazado</value>
    </filters>
    <label>Muestras Rechazadas</label>
    <sharedTo>
        <role>Muestras</role>
    </sharedTo>
</ListView>