force-app/main/default/objects/SolicitudMuestra__c/listViews/Todas_las_muestras.listView-meta.xml
<ListView>
    <fullName>Todas_las_muestras</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>region__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Solicitudes de Muestra</label>
</ListView>